--- a/api/products/models/products.settings.json
+++ b/api/products/models/products.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "products",
   "info": {
-    "name": "products"
+    "name": "products",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -41,6 +42,9 @@
     },
     "category": {
       "type": "string"
+    },
+    "Bestseller": {
+      "type": "boolean"
     }
   }
 }
